--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(funny_json)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(funny_json main.cpp)
+add_executable(funny_json main.cpp lib/FunnyJson.cpp lib/FunnyJson.h lib/FunnyJsonDoc.cpp lib/FunnyJsonDoc.h lib/FunnyJsonObject.cpp lib/FunnyJsonObject.h lib/FunnyJsonEnum.h)
